testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

CHANGES
-------

* The testrepository test suite depends on testtools 0.9.8. (Robert Collins)

* Local implementation of MatchesException has been removed in favour of the
  testtools implementation. All ``self.assertRaises`` have been migrated to
  this new testing interface.

* ``setup.py`` will read the version number from PKG-INFO when it is running
  without a bzr tree : this makes it easier to snapshot without doing a 
  release. (Jonathan Lange)

0.0.4
+++++

IMPROVEMENTS
------------

* ``failing`` now supports ``--list`` to list the failing tests.
  (Jonathan Lange)

* Repository not found errors are now clearer. (Jonathan Lange, #530010)

* The summary of a test run is now formatted as foo=NN rather than foo: NN,
  which some folk find easier to read.

* The file implementation of Repository.open now performs ~ expansion.
  (Jonathan Lange, #529665)

* Test failures and errors are now shown as we get them in 'load',
  'failing' and 'last'. (Jonathan Lange, #613152)

0.0.3
+++++

IMPROVEMENTS
------------

* ``failing`` now correctly calls ``repository.get_failing`` and will this
  track all seen failures rather than just the latest observed failures.

* New argument type ``StringArgument`` for use when a supplied argument is just
  a string, rather than a typed argument.

* New subcommand 'failing' added.

* New subcommand ``run`` added which reads a .testr.conf file to figure out how
  to run tests with subunit output. It then runs them and pipes into testr
  load. This allows simpler integration and permits a programming interface so
  that tools like Tribunal/Eclipe etc can refresh tests in a testrepository.
  ``run`` also passes arguments and options down to the child process. ``run``
  can also supply test ids on the command, for test runners that want that.

* The command 'last' will no longer error on a new repository.