@@ -18,6 +18,12 @@ CHANGES
   without a bzr tree : this makes it easier to snapshot without doing a 
   release. (Jonathan Lange)
 
+* Updates to next-stream are done via a temporary file to reduce the chance
+  of an empty next-stream being written to disk. (Robert Collins, #531664)
+
+* When next-stream is damaged testr will report that it is corrupt rather than
+  reporting an invalid literal. (Robert Collins, #531663)
+
 0.0.4
 +++++
 
